@@ -3,6 +3,7 @@ lib_LTLIBRARIES = libAppleWM.la
 libAppleWM_la_SOURCES = \
          applewm.c
 
-libAppleWM_la_LIBADD = @DEP_LIBS@
+libAppleWM_la_CFLAGS = @APPLEWM_CFLAGS@
+libAppleWM_la_LIBADD = @APPLEWM_LIBS@
 
 libAppleWM_la_LDFLAGS = -version-info 7:0:0 -no-undefined
